wp-theme-divi >> Rename repository

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Divi-child
-Theme URI: https://www.elegantthemes.com
+Theme URI: https://www.presstify.com/pollen-solutions/wp-divi-theme
 Version: 1.0.0
 Description: Theme enfant Divi.
 Author: Presstify
